syntax= "proto3";

option java_multiple_files = true;
option java_package = "grpc.SmartOffice.documentRepository";
option java_outer_classname = "DocumentRepositoryImpl";

service documentRepository{
	rpc retrieveDocument(RequestedDocument) returns (stream RequestedDocument){} // Server Side Stream
	rpc retrieveFolderList(FolderLocation) returns (stream FolderListing){} // Server Side Stream
	rpc sendDocument(stream SentDocument) returns (NewDocumentPath){} // Client Side Stream
	rpc deleteDocument(stream DeleteDocument) returns (Empty){}  // Client Side Stream
	rpc updateDocument(stream UpdateDocument) returns (Empty){} // Client Side Stream
}

message FolderLocation{
	string path = 1;
}
message FolderListing{
	string folderListing = 1;
}
message FolderContents{
	string filesList = 1;
}

message Empty{}
message RequestedDocument {
  string docName = 1;
}
message SentDocument {
  string docName = 1;
}
message DeleteDocument {
  string docName = 1;
}
message UpdateDocument {
  string docName = 1;
}
message NewDocumentPath{
	string newDocumentPath = 1;
}